version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/ACT/Automation/Mechanical/Connections/SpotWeldGroup.rst.txt
.. vale off



:class:`SpotWeldGroup`
======================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.Connections.SpotWeldGroup

   Bases: :py:obj:`object`


   
   Defines a SpotWeldGroup.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: SpotWeldGroup

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Activate`
            - Activate the current object.
          * - :py:attr:`~AddComment`
            - Creates a new child Comment.
          * - :py:attr:`~AddImage`
            - Creates a new child Image.
          * - :py:attr:`~AddSpotWeldConnection`
            - Creates a new child SpotWeldConnection.
          * - :py:attr:`~CopyTo`
            - Copies all visible properties from this object to another.
          * - :py:attr:`~CreateParameter`
            - Creates a new parameter for a Property.
          * - :py:attr:`~Duplicate`
            - Creates a copy of the current DataModelObject.
          * - :py:attr:`~ExportToFile`
            - Exports all spot welds to user selected path.
          * - :py:attr:`~GenerateSpotWeldConnections`
            - Generate spot welds provided in the Weld input file.
          * - :py:attr:`~GetChildren`
            - Gets the list of children, filtered by type.
          * - :py:attr:`~GetParameter`
            - Gets the parameter corresponding to the given property.
          * - :py:attr:`~GroupAllSimilarChildren`
            - Run the GroupAllSimilarChildren action.
          * - :py:attr:`~GroupSimilarObjects`
            - Run the GroupSimilarObjects action.
          * - :py:attr:`~PropertyByAPIName`
            - Get a property by its API name.
          * - :py:attr:`~PropertyByName`
            - Get a property by its unique name.
          * - :py:attr:`~RemoveParameter`
            - Removes the parameter from the parameter set corresponding to the given property.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AngleTolerance`
            - Gets or sets the AngleTolerance.
          * - :py:attr:`~Children`
            - Gets the list of children.
          * - :py:attr:`~ChildrenCreationMethod`
            - Gets or sets the ChildrenCreationMethod.
          * - :py:attr:`~Comments`
            - Gets the list of associated comments.
          * - :py:attr:`~ConnectionBehavior`
            - Gets or sets the ConnectionBehavior.
          * - :py:attr:`~DataModelObjectCategory`
            - Gets the current DataModelObject's category.
          * - :py:attr:`~Images`
            - Gets the list of associated images.
          * - :py:attr:`~InternalObject`
            - Gets the internal object. For advanced usage only.
          * - :py:attr:`~Material`
            - Gets or sets the Material.
          * - :py:attr:`~NumConnections`
            - Gets the NumConnections.
          * - :py:attr:`~NumWeldPoints`
            - Gets the NumWeldPoints.
          * - :py:attr:`~NumberOfLayers`
            - Gets or sets the NumberOfLayers.
          * - :py:attr:`~PenetrationTolerance`
            - Gets or sets the PenetrationTolerance.
          * - :py:attr:`~Properties`
            - Gets the list of properties for this object.
          * - :py:attr:`~ReadOnly`
            - Gets or sets the ReadOnly.
          * - :py:attr:`~ShellThicknessEffect`
            - Gets or sets the ShellThicknessEffect.
          * - :py:attr:`~SnapToEdgeTolerance`
            - Gets or sets the SnapToEdgeTolerance.
          * - :py:attr:`~SpotWeldFileName`
            - Gets or sets the SpotWeldFileName.
          * - :py:attr:`~StiffnessBehavior`
            - Gets or sets the StiffnessBehavior.
          * - :py:attr:`~Units`
            - Gets or sets the Units.
          * - :py:attr:`~VisibleProperties`
            - Gets the list of properties that are visible for this object.
          * - :py:attr:`~WeldRadius`
            - Gets or sets the WeldRadius.
          * - :py:attr:`~WeldSearchDistance`
            - Gets or sets the WeldSearchDistance.
          * - :py:attr:`~WeldType`
            - Gets or sets the WeldType.







Property detail
---------------
.. py:property:: AngleTolerance
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the AngleTolerance.
















   ..
       !! processed by numpydoc !!

.. py:property:: Children
   :type: Optional[List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]


   
   Gets the list of children.
















   ..
       !! processed by numpydoc !!

.. py:property:: ChildrenCreationMethod
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ConnectionCreationMethod]


   
   Gets or sets the ChildrenCreationMethod.
















   ..
       !! processed by numpydoc !!

.. py:property:: Comments
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Comment]]


   
   Gets the list of associated comments.
















   ..
       !! processed by numpydoc !!

.. py:property:: ConnectionBehavior
   :type: Optional[Ansys.Mechanical.DataModel.Enums.StiffnessBehavior]


   
   Gets or sets the ConnectionBehavior.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataModelObjectCategory
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory]


   
   Gets the current DataModelObject's category.
















   ..
       !! processed by numpydoc !!

.. py:property:: Images
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Image]]


   
   Gets the list of associated images.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSSpotWeldGroupAuto]


   
   Gets the internal object. For advanced usage only.
















   ..
       !! processed by numpydoc !!

.. py:property:: Material
   :type: Optional[str]


   
   Gets or sets the Material.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumConnections
   :type: Optional[int]


   
   Gets the NumConnections.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumWeldPoints
   :type: Optional[int]


   
   Gets the NumWeldPoints.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfLayers
   :type: Optional[int]


   
   Gets or sets the NumberOfLayers.
















   ..
       !! processed by numpydoc !!

.. py:property:: PenetrationTolerance
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the PenetrationTolerance.
















   ..
       !! processed by numpydoc !!

.. py:property:: Properties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: ReadOnly
   :type: Optional[bool]


   
   Gets or sets the ReadOnly.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShellThicknessEffect
   :type: Optional[bool]


   
   Gets or sets the ShellThicknessEffect.
















   ..
       !! processed by numpydoc !!

.. py:property:: SnapToEdgeTolerance
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the SnapToEdgeTolerance.
















   ..
       !! processed by numpydoc !!

.. py:property:: SpotWeldFileName
   :type: Optional[str]


   
   Gets or sets the SpotWeldFileName.
















   ..
       !! processed by numpydoc !!

.. py:property:: StiffnessBehavior
   :type: Optional[Ansys.Mechanical.DataModel.Enums.StiffnessBehavior]


   
   Gets or sets the StiffnessBehavior.
















   ..
       !! processed by numpydoc !!

.. py:property:: Units
   :type: Optional[Ansys.Mechanical.DataModel.Enums.WBUnitSystemType]


   
   Gets or sets the Units.
















   ..
       !! processed by numpydoc !!

.. py:property:: VisibleProperties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties that are visible for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: WeldRadius
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the WeldRadius.
















   ..
       !! processed by numpydoc !!

.. py:property:: WeldSearchDistance
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the WeldSearchDistance.
















   ..
       !! processed by numpydoc !!

.. py:property:: WeldType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.SpotWeldTypes]


   
   Gets or sets the WeldType.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Activate() -> None

   
   Activate the current object.

   ..
       !! processed by numpydoc !!

.. py:method:: AddComment() -> Ansys.ACT.Automation.Mechanical.Comment

   
   Creates a new child Comment.

   ..
       !! processed by numpydoc !!

.. py:method:: AddImage(filePath: str) -> Ansys.ACT.Automation.Mechanical.Image

.. code-block:: text

   Creates a new child Image.
   If a filePath is provided, the image will be loaded from that file,
   if not, the image will be a screen capture of the Geometry window.

..
       !! processed by numpydoc !!

.. py:method:: AddSpotWeldConnection() -> Ansys.ACT.Automation.Mechanical.Connections.SpotWeldConnection

   
   Creates a new child SpotWeldConnection.

   ..
       !! processed by numpydoc !!

.. py:method:: CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject) -> None

   
   Copies all visible properties from this object to another.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Creates a new parameter for a Property.

   ..
       !! processed by numpydoc !!

.. py:method:: Duplicate() -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   Creates a copy of the current DataModelObject.

   ..
       !! processed by numpydoc !!

.. py:method:: ExportToFile(filePath: str) -> None

   
   Exports all spot welds to user selected path.

   ..
       !! processed by numpydoc !!

.. py:method:: GenerateSpotWeldConnections() -> None

   
   Generate spot welds provided in the Weld input file.

   ..
       !! processed by numpydoc !!

.. py:method:: GetChildren(recurses: bool, children: List[ChildrenType]) -> List[ChildrenType]

   
   Gets the list of children, filtered by type.

   ..
       !! processed by numpydoc !!

.. py:method:: GetParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Gets the parameter corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupAllSimilarChildren() -> None

   
   Run the GroupAllSimilarChildren action.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupSimilarObjects() -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   Run the GroupSimilarObjects action.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByAPIName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

.. code-block:: text

   Get a property by its API name.
   If multiple properties have the same API Name, only the first property with that name will be returned.

..
       !! processed by numpydoc !!

.. py:method:: PropertyByName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

   
   Get a property by its unique name.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveParameter(propName: str) -> None

   
   Removes the parameter from the parameter set corresponding to the given property.

   ..
       !! processed by numpydoc !!



.. vale on